--- a/styles/bio.css
+++ b/styles/bio.css
@@ -4,7 +4,7 @@
 
 .bio {
     color: var(--color-text-secondary);
-    font-size: 0.75rem;
+    font-size: 14px;
     text-transform: lowercase;
     margin: 0rem;
 }
